Smaller html/body height to avoid scrollbars

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 /* LAYOUT */
 
 html, body {
-  height: 100%;
+  height: 97%;
 }
 
 body {
